package helpdesk.execucaofluxo.domain.tarefas;

public enum EstadoTarefa {
    PENDENTE, ASSIGNADA, CONCLUIDA;


    EstadoTarefa() {
    }


}
